third_party/move/move-compiler-v2/tests/lambda/inline-parity/eval_ignored_param.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `Test::foo` has function parameters:
  ┌─ tests/lambda/inline-parity/eval_ignored_param.move:3:9
  │
3 │     fun foo(f:|u64, u64, u64| u64, g: |u64, u64, u64| u64, x: u64, _: u64, y: u64, z: u64): u64 {
  │         ^^^ -                      - Parameter `g` has function-valued type `|(u64, u64, u64)|u64`.
  │             │
  │             Parameter `f` has function-valued type `|(u64, u64, u64)|u64`.
